# wokelang

./: Cargo.toml  Containerfile  ECOSYSTEM.scm  META.scm  README.adoc  SECURITY.md  STATE.scm  dune-project  justfile
.github/workflows/: codeql.yml  ghcr-publish.yml  ocaml-core.yml  security.yml
.machine_read/: ANCHOR.wokelang.scm  AUTHORITY_STACK.mustfile-nickel.scm  LLM_SUPERINTENDENT.scm  ROADMAP.f0.scm  SPEC.core.scm
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
benches/: vm_bench.rs
core/: ast.ml  dune  eval.ml  lexer.mll  main.ml  parser.mly
docs/: ROADMAP.md  grammar.ebnf
docs/core/: INDEX.md  SETUP.md  SPEC.core.scm
docs/proofs/: README.md
docs/proofs/compiler/: memory-model.md  semantic-preservation.md
docs/proofs/complexity/: complexity-analysis.md
docs/proofs/concurrency/: worker-safety.md
docs/proofs/formal-semantics/: denotational-semantics.md  grammar-proofs.md  operational-semantics.md
docs/proofs/papers/: language-design-whitepaper.md
docs/proofs/security/: capability-proofs.md  consent-model.md
docs/proofs/type-theory/: category-theory-foundations.md  hindley-milner.md  type-safety.md
docs/proofs/verification/: WokeLang.lean  WokeLang.v
docs/wiki/: Home.md
docs/wiki/Core-Concepts/: Consent-System.md  Emote-Tags.md  Gratitude.md
docs/wiki/Getting-Started/: Basic-Syntax.md  Hello-World.md  Installation.md  REPL.md
docs/wiki/Internals/: Architecture.md  FFI.md  Interpreter.md  Lexer.md  Parser.md  WASM-Compilation.md
docs/wiki/Language-Guide/: Control-Flow.md  Error-Handling.md  Functions.md  Variables-and-Types.md
docs/wiki/Reference/: Builtin-Functions.md  (+4 more)
examples/: demo.woke  hello.woke  hello_world.wl  math.wasm  math.woke  module_test.woke  result_types.woke  security.woke  stdlib_demo.woke  workers.woke
examples/modules/: greetings.woke  math.woke
grammar/: wokelang.ebnf
include/: wokelang.h
lib/: README.md
lib/common/: README.md  async.woke  collections.woke  core.woke  prelude.woke
lib/wokelang/: README.md  consent.woke  emotes.woke  gratitude.woke
src/: lib.rs  main.rs  repl.rs
src/ast/: mod.rs
src/codegen/: mod.rs  wasm.rs
src/ffi/: c_api.rs  mod.rs
src/interpreter/: mod.rs  value.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
src/security/: consent.rs  mod.rs
src/stdlib/: array.rs  chan.rs  io.rs  json.rs  math.rs  mod.rs  net.rs  string.rs  time.rs
src/typechecker/: mod.rs
src/vm/: bytecode.rs  compiler.rs  machine.rs  mod.rs  optimizer.rs
src/worker/: mod.rs
test/: dune  test_wokelang.ml
test/conformance/: consent_grant.wl  consent_scope.wl  emote_annotations.wl  error_handling.wl  gratitude_basic.wl  units_basic.wl  units_same_type.wl
zig/: build.zig  example.zig  wokelang.zig
(+1 files in other folders)
