[package]
name = "wokelang"
version = "0.1.0"
edition = "2021"
description = "A human-centered, consent-driven programming language"
license = "MIT"
repository = "https://github.com/hyperpolymath/wokelang"

[lib]
name = "wokelang"
path = "src/lib.rs"

[[bin]]
name = "woke"
path = "src/main.rs"

[dependencies]
logos = "0.14"
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
opt-level = "z"
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "s"
